--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 @import "base";
 @import "globals";
 
-// backgorund
+// background
 body {
 	color: #fff;
 	background: url(../../img/bg.png) #290946;
@@ -34,7 +34,6 @@ h1 {
 	text-align: center;
 	line-height: 1;
 	margin: 0;
-	margin-top: 2.5rem;
 }
 
 .lead {
@@ -54,6 +53,10 @@ h1 {
 .content {
 	// @include flex(1);
 	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 // app wireframe demo
@@ -78,6 +81,7 @@ h1 {
 	top: -27px;
 	left: 10px;
 }
+
 .browser-controls div {
 	background: $color-orange;
 	display: inline-block;
