--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-// @import "bourbon/bourbon";
+@import "bourbon/bourbon";
 
 @import "base";
 @import "globals";
@@ -8,17 +8,13 @@ body {
 	color: #fff;
 	background: url(../../img/bg.png) #290946;
 	min-height: 100vh;
-	// @include display(flex);
-	display: flex;
-	flex-direction: column;
+	@include display(flex);
+	@include flex-direction(column);
 }
 
 body:before {
 	content: "";
-	background-image: -o-linear-gradient(-44deg, $color-purple 0%, $color-blue 100%);
-	background-image: -moz-linear-gradient(-44deg, $color-purple 0%, $color-blue 100%);
-	background-image: -ms-linear-gradient(-44deg, $color-purple 0%, $color-blue 100%);
-	background-image: linear-gradient(-44deg, $color-purple 0%, $color-blue 100%);
+	@include linear-gradient(-44deg, $color-purple 0%, $color-blue 100%);
 	position: fixed;
 	height: 100%;
 	width: 100%;
@@ -26,6 +22,21 @@ body:before {
 	left: 0;
 	opacity: .47;
 	z-index: -1;
+}
+
+// header
+header {
+	@include clearfix;
+}
+
+// logo
+.logo {
+	float: left;
+}
+
+// twitter-icon
+.twitter {
+	float: right;
 }
 
 // typography
@@ -47,16 +58,17 @@ h1 {
 // container
 .container {
 	margin: 0 auto;
+	width: 100%;
+	max-width: 1200px;
 }
 
 // stick demo to bottom
 .content {
-	// @include flex(1);
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	@include flex(1);
+	@include display(flex);
+	@include flex-direction(column);
+	@include align-items(center);
+	@include justify-content(center);
 }
 
 // app wireframe demo
