improving typography sizing

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -4,14 +4,15 @@ body {
 
 // typography
 h1 {
-	font-size: 4rem;
+	font-size: 3.2rem;
 	text-align: center;
 	line-height: 1;
 	margin: 0;
 }
 
 .lead {
-	font-size: 1.5rem;
+	font-size: 1.4rem;
 	line-height: 1.5;
 	margin: 1rem;
+	margin-bottom: 2.5rem;
 }
