styling demo frame

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,5 +4,6 @@ $color-orange: #F94F45;
 $color-purple: #B262D1;
 $color-gray-light: #E3E3E3;
 $color-gray: #D5D9DA;
-$color-green: #F4B95A;
-$color-yellow: #95D06E;
+$color-green-dark: #32875E;
+$color-green: #95D06E;
+$color-yellow: #F4B95A;
