--- a/sass/_demo-wireframe.scss
+++ b/sass/_demo-wireframe.scss
@@ -1,7 +1,7 @@
 // app wireframe demo
 .big-grey-block {
 	background: $color-gray-light;
-	height: 420px;
+	height: 350px;
 	width: 900px;
 	max-width: 90%;
 	margin: 0 auto;
@@ -28,6 +28,100 @@
 	width: 16px;
 	border-radius: 50%;
 	margin-right: 5px;
-	&:nth-child(2) { background: $color-green;  }
-	&:nth-child(3) { background: $color-yellow; }
+	&:nth-child(2) { background: $color-yellow; }
+	&:nth-child(3) { background: $color-green;  }
+}
+
+// frame content
+.body {
+	@include display(flex);
+}
+
+// tweets
+.tweets {
+	width: 75%;
+	list-style: none;
+	padding-left: 50px;
+	padding-right: 50px;
+
+	li {
+		margin: 30px 0;
+		position: relative;
+	}
+}
+
+// icons & counters
+.icon, .counter {
+	position: absolute;
+	left: -50px;
+	top: 50%;
+	@include transform(translateY(-50%));
+	width: 50px;
+	text-align: center;
+}
+
+.icon {
+	color: shade($color-green, 15%);
+}
+
+// counter 
+.counter {
+	font-size: .8rem;
+	font-weight: 700;
+	color: rgba(0,0,0,.3);
+}
+
+// comments counter (on the right)
+.comments-counter {
+	position: absolute;
+	top: 50%;
+	@include transform(translateY(-50%));
+	width: 50px;
+	right: -50px;
+
+	span {
+		display: inline-block;
+		background: $color-green-dark;
+		color: $color-white;
+		padding: 2px 3px;
+		border-radius: 3px;
+		font-size: .7rem;
+		font-weight: 700;
+		width: 20px;
+		text-align: center;
+	}
+
+	span:after {
+		content: "";
+		position: absolute;
+		@include triangle(6px, $color-green-dark, down);
+		border-top-width: 6px;
+		top: 100%;
+		left: 10px;
+	}
+}
+
+
+// comments
+.comments {
+	width: 25%;
+
+	ul {
+		list-style: none;
+		margin-top: 45px;
+		margin-right: 10px;
+		margin-left: 0;
+		background: shade($color-gray-light, 5%);
+		padding: 10px;
+		border-radius: 4px;
+	}
+
+	li {
+		font-size: .9rem;
+		line-height: 1.3;
+	}
+
+	img {
+		border-radius: 50%;
+	}
 }
