sketch goes crazy. remade logo in Illustrator

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,7 +8,7 @@ header {
 .logo {
 	float: left;
 	@include hide-text;
-	@include retina-image("../../img/lg", 146px 42px, $retina-suffix: "@2x");
+	background: url(../../img/lg.svg);
 	background-size: 146px 42px;
 	width: 146px;
 	height: 42px;
