made shit responsive

--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -15,4 +15,6 @@
 	@include flex-direction(column);
 	@include align-items(center);
 	@include justify-content(center);
+	padding-top: 40px;
+	padding-bottom: 40px;
 }
