--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -1,17 +1,24 @@
 button {
 	background: $color-orange;
-	height: 50px;
-	line-height: 50px;
-	padding: 0 45px;
 	color: $color-white;
 	border: 0;
 	border-radius: 5px;
-	font-size: 1rem;
 	text-transform: uppercase;
 	font-weight: bold;
 	box-shadow: 0 0 5px rgba(0,0,0,.3);
 	cursor: pointer;
 	@include transition(background .4s);
+	height: 40px;
+	line-height: 40px;
+	padding: 0 20px;
+	font-size: .9rem;
+	
+	@media (min-width: 524px) {
+		font-size: 1rem;
+		height: 50px;
+		line-height: 50px;
+		padding: 0 45px;
+	}
 
 	&:hover {
 		background: tint($color-orange, 5%);
