--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -17,6 +17,11 @@ html, body, button {
 body {
 	margin: 0;
 	font-weight: 300;
+
+  font-size: 14px;
+  @media(min-width: 600px) {
+    font-size: 16px;
+  }
 }
 
 //  IE11 fix
