--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -4,15 +4,28 @@ body {
 
 // typography
 h1 {
-	font-size: 3.2rem;
 	text-align: center;
 	line-height: 1;
 	margin: 0;
+	font-size: 2rem;
+
+	@media(min-width: 550px) {
+		font-size: 2.8rem;
+	}
+
+	@media(min-width: 900px) {
+		font-size: 3.2rem;
+	}
 }
 
 .lead {
-	font-size: 1.4rem;
 	line-height: 1.5;
 	margin: 1rem;
 	margin-bottom: 2.5rem;
+	font-size: 1.2rem;
+	text-align: center;
+
+	@media(min-width: 900px) {
+		font-size: 1.4rem;
+	}
 }
